--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,10 +40,10 @@ repos:
     types: [python]
     pass_filenames: false
 
-  - id: pytest-cov
-    name: pytest
-    stages: [push]
-    language: system
-    entry: pipenv run pytest --cov --cov-fail-under=100
-    types: [python]
-    pass_filenames: false
+  # - id: pytest-cov
+  #   name: pytest
+  #   stages: [push]
+  #   language: system
+  #   entry: pipenv run pytest --cov --cov-fail-under=100
+  #   types: [python]
+  #   pass_filenames: false
