--- a/Pipfile
+++ b/Pipfile
@@ -16,3 +16,7 @@ mypy = "*"
 pre-commit = "*"
 pytest = "*"
 pytest-cov = "*"
+setuptools-rust = "*"
+wheel = "*"
+pytest-benchmark = "*"
+pipenv = "*"
