--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,4 @@
-[package]
-authors = ["Robyn Ffrancon <robyn.ffrancon@protonmail.com>"]
-name = "py-crev-lib"
-version = "0.1.0"
-edition = "2018"
-
-[dependencies]
-rayon = "1.0.2"
-pyo3 = "0.9.2"
-crev-lib = { git = "https://github.com/crev-dev/cargo-crev.git", rev = "2cff30fb9165d7048b2667e0f10cadeeb7e8b438" }
-
-[lib]
-name = "py_crev_ib"
-path = "crev/lib.rs"
-crate-type = ["cdylib"]
+[workspace]
+members = [
+	"crev"
+]
