--- a/crev/Cargo.toml
+++ b/crev/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 crev-lib = { git = "https://github.com/crev-dev/cargo-crev.git", rev = "2cff30fb9165d7048b2667e0f10cadeeb7e8b438" }
+crev-common = { git = "https://github.com/crev-dev/cargo-crev.git", rev = "2cff30fb9165d7048b2667e0f10cadeeb7e8b438" }
 rayon = "1.0.2"
 pyo3 = "0.9.2"
 anyhow = "1.0.31"
