Add docstrings. Add linting support for docstrings.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,11 @@ max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4
 
+# TODO: combine this with flake8 above
+[pydocstyle]
+ignore = D100, D203, D405, D104, D213
+match-dir=pip_crev
+
 [isort]
 multi_line_output=3
 include_trailing_comma=True
