--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,13 @@ repos:
     entry: pipenv run flake8
     types: [python]
     exclude: setup.py
+  
+  - id: pydocstyle
+    name: pydocstyle
+    stages: [commit]
+    language: system
+    entry: pipenv run pydocstyle
+    types: [python]
 
   - id: mypy
     name: mypy
