Move pip_crev test directory into pip_crev directory.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ select = B,C,E,F,W,T4
 # TODO: combine this with flake8 above
 [pydocstyle]
 ignore = D100, D203, D405, D104, D213
-match-dir=pip_crev
+match='(?!test_).*\.py'
 
 [isort]
 multi_line_output=3
@@ -17,8 +17,8 @@ use_parentheses=True
 line_length=88
 
 [mypy]
-files=pip_crev,test
+files=pip_crev
 ignore_missing_imports=true
 
 [tool:pytest]
-testpaths=test/
+testpaths=pip_crev/test/
